fix(login): prevent layout shift on error message display

--- a/src/app/pages/admin-login/admin-login.component.css
+++ b/src/app/pages/admin-login/admin-login.component.css
@@ -48,6 +48,15 @@
 .error {
   color: red;
   text-align: center;
+  height: 24px;
+  /* ou ajuste como preferir */
+  font-size: 14px;
+  transition: opacity 0.3s ease;
+  opacity: 0;
+}
+
+.error.visible {
+  opacity: 1;
 }
 
 mat-form-field {
@@ -89,8 +98,9 @@ mat-form-field {
 }
 
 .mat-mdc-progress-spinner {
-    --mdc-circular-progress-active-indicator-color: white;
+  --mdc-circular-progress-active-indicator-color: white;
 }
+
 @media (max-width: 1700px) {
   .h1adm {
     margin-top: 100px;
